# talkaway-poc

./: .gitignore  README.md  main.py  pyproject.toml
core/: audio.py  generative.py
local/: poc.py
remote/: index.html  poc.py
