[tool.poetry]
name = "talkaway-poc"
version = "0.1.0"
description = ""
authors = ["xue-yuan <denon@xueyuan.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
speechrecognition = "^3.10.0"
pyaudio = "^0.2.13"
openai = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
